--- a/css/admin/points.css
+++ b/css/admin/points.css
@@ -1,8 +1,8 @@
-.photos-menu-block {
+.points-menu-block {
     padding: 5px;
     border-bottom: 1px solid #87ceeb;
 }
 
-.photos-menu-block a {
+.points-menu-block a {
     color: #87ceeb;
 }
