--- a/css/common-print.css
+++ b/css/common-print.css
@@ -22,7 +22,7 @@
         background: none;
     }
 
-    #city_path {
+    .CityPath {
         color: #292929;
         background: #ffffff;
     }
@@ -35,7 +35,7 @@
         border: none;
     }
 
-    .yandex_ad {
+    .CommonYandexAdverts {
         display: none;
     }
 }
