--- a/css/admin/photos_import.css
+++ b/css/admin/photos_import.css
@@ -68,6 +68,13 @@
     border: 1px solid #bbbbbb;
 }
 
+#photos-object-upload-form {
+    display: none;
+    margin-bottom: 10px;
+    padding: 5px;
+    border: 1px solid #bbbbbb;
+}
+
 .photos-object-detail-preview-image {
     height: 400px;
     display: block;
